--- a/index.html
+++ b/index.html
@@ -19,7 +19,24 @@
     <img src="whiskey.png" id="logo">
     <h1>Whiskey</h1>
     <p>Professional web developer</p>
+
+
+    <div class="portfolio">
+        <h4>Portfolio</h4>
+
+        <p>
+
+           <a href="projects/natours/">Natours</a>
+           <a href="projects/trillo">Trillo</a> 
+           <a href="projects/blocks/">Blocks</a>
+           <a href="projects/nexter/">Nexter</a> 
+           <a href="projects/windows/">Windows</a> 
+
+        </p>
+    </div>
+
     <div class="contact">
+        <h4>Contact</h4>
         <p>
            <a href="#" id="discord">Discord</a>            <a href="#" id="email">Email</a> 
 
