--- a/projects/windows/index.html
+++ b/projects/windows/index.html
@@ -12,7 +12,7 @@
 
             <a href="https://chrome.google.com/" class="desktop__icon">
                 <div class="desktopicon__image">
-                    <img src="https://cdn0.iconfinder.com/data/icons/jfk/512/chrome-512.png">
+                    <img src="apps/chrome.png">
                 </div>
                 <div class="desktopicon__text">
                     <span>
@@ -23,7 +23,7 @@
 
             <a href="https://minecraft.net/" class="desktop__icon">
                 <div class="desktopicon__image">
-                    <img src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/i/977e8c4f-1c99-46cd-b070-10cd97086c08/d36qrs5-017c3744-8c94-4d47-9633-d85b991bf2f7.png">
+                    <img src="apps/minecraft.png">
                 </div>
                 <div class="desktopicon__text">
                     <span>
@@ -34,7 +34,7 @@
 
             <a href="https://chrome.google.com/" class="desktop__icon">
                 <div class="desktopicon__image">
-                    <img src="https://cdn0.iconfinder.com/data/icons/jfk/512/chrome-512.png">
+                    <img src="apps/chrome.png">
                 </div>
                 <div class="desktopicon__text">
                     <span>
@@ -45,7 +45,7 @@
 
             <a href="https://minecraft.net/" class="desktop__icon">
                 <div class="desktopicon__image">
-                    <img src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/i/977e8c4f-1c99-46cd-b070-10cd97086c08/d36qrs5-017c3744-8c94-4d47-9633-d85b991bf2f7.png">
+                    <img src="apps/minecraft.png">
                 </div>
                 <div class="desktopicon__text">
                     <span>
@@ -56,7 +56,7 @@
 
             <a href="https://chrome.google.com/" class="desktop__icon">
                 <div class="desktopicon__image">
-                    <img src="https://cdn0.iconfinder.com/data/icons/jfk/512/chrome-512.png">
+                    <img src="apps/chrome.png">
                 </div>
                 <div class="desktopicon__text">
                     <span>
@@ -67,7 +67,7 @@
 
             <a href="https://minecraft.net/" class="desktop__icon">
                 <div class="desktopicon__image">
-                    <img src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/i/977e8c4f-1c99-46cd-b070-10cd97086c08/d36qrs5-017c3744-8c94-4d47-9633-d85b991bf2f7.png">
+                    <img src="apps/minecraft.png">
                 </div>
                 <div class="desktopicon__text">
                     <span>
@@ -78,7 +78,7 @@
 
             <a href="https://chrome.google.com/" class="desktop__icon" style="grid-column: 2 / 3; grid-row: 3 / 4;">
                 <div class="desktopicon__image">
-                    <img src="https://cdn0.iconfinder.com/data/icons/jfk/512/chrome-512.png">
+                    <img src="apps/chrome.png">
                 </div>
                 <div class="desktopicon__text">
                     <span>
@@ -89,7 +89,7 @@
 
             <a href="https://minecraft.net/" class="desktop__icon" style="grid-column: 3 / 4; grid-row: 6 / 7;">
                 <div class="desktopicon__image">
-                    <img src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/i/977e8c4f-1c99-46cd-b070-10cd97086c08/d36qrs5-017c3744-8c94-4d47-9633-d85b991bf2f7.png">
+                    <img src="apps/minecraft.png">
                 </div>
                 <div class="desktopicon__text">
                     <span>
@@ -115,11 +115,11 @@
             </div>
 
             <a href="https://chrome.google.com/"  class="dock__item dock__item--bigspace">
-                <img src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/i/977e8c4f-1c99-46cd-b070-10cd97086c08/d36qrs5-017c3744-8c94-4d47-9633-d85b991bf2f7.png">
+                <img src="apps/chrome.png">
             </a>
 
             <a href="https://minecraft.net/" class="dock__item dock__item--bigspace">
-                <img src="https://cdn0.iconfinder.com/data/icons/jfk/512/chrome-512.png">
+                <img src="apps/minecraft.png">
             </a>
 
             <a class="dock__item dock__item--smallspace dock__item--collapse">
