--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@
     <p>Professional web developer</p>
 
 
-    <div class="portfolio">
+    <div class="portfolio center">
         <h4>Portfolio</h4>
 
         <p>
 
-           <a href="projects/natours/">Natours</a>
-           <a href="projects/trillo">Trillo</a> 
-           <a href="projects/blocks/">Blocks</a>
-           <a href="projects/nexter/">Nexter</a> 
-           <a href="projects/windows/">Windows</a> 
+           <a target="_blank" href="projects/natours/">Natours</a>
+           <a target="_blank" href="projects/trillo">Trillo</a> 
+           <a target="_blank" href="projects/blocks/">Blocks</a>
+           <a target="_blank" href="projects/nexter/">Nexter</a> 
+           <a target="_blank" href="projects/windows/">Windows</a> 
 
         </p>
     </div>
 
-    <div class="contact">
+    <div class="contact center">
         <h4>Contact</h4>
         <p>
            <a href="#" id="discord">Discord</a>            <a href="#" id="email">Email</a> 
